build: add `--add-opens=java.base/java.util=ALL-UNNAMED` java argument to fix "Unable to make protected final java.lang.Class"
EPMDJ-10937